--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,13 @@
 <body>
   <p>Welcome to the chat app!</p>
 
+  <form id="message-form">
+    <input type="text" name="message" placeholder="Message">
+    <button>Send</button>
+  </form>
+
+  <ol id="messages"></ol>
+
   <script src="/socket.io/socket.io.js"></script>
   <script src="/js/index.js"></script>
 </body>
